--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -4,17 +4,18 @@ title: About
 date: 2021-03-19
 ---
 
-# Your Name
+<img src="/images/waiyan.png" style={{width: '200px', height: '200px', borderRadius: '50%'}} alt="Wai Yan" />
 
-Hey, I'm a Senior Software Engineer at Company. I enjoy working with Next.js and crafting beautiful front-end experiences.
+## 👋 Hi, I'm Wai Yan
 
-This portfolio is built with **Next.js** and a library called [Nextra](https://nextra.vercel.app/). It allows you to write Markdown and focus on the _content_ of your portfolio.
+I'm a Full Stack Web Developer specializing in creating robust and scalable web applications. With expertise in React, Next.js, and AWS, I transform ideas into fully functional digital experiences.
 
-[**Deploy your own**](https://vercel.com/new/clone?demo-title=Portfolio+Starter+Kit&demo-description=Easily+create+a+portfolio+with+Next.js+and+Markdown.&demo-url=https%3A%2F%2Fdemo.vercel.blog%2F&demo-image=%2F%2Fimages.ctfassets.net%2Fe5382hct74si%2F2aC4eHLrOKmT4fnLfoNGK2%2F14b1e6bbe598ec023ffe85001d31e634%2FCleanShot_2022-04-11_at_23.12.01.png&project-name=Portfolio+Starter+Kit&repository-name=portfolio-starter-kit&repository-url=https%3A%2F%2Fgithub.com%2Fvercel%2Fnextjs-portfolio-starter&from=templates&skippable-integrations=1&teamCreateStatus=hidden) in a few minutes.
+I focus on building performant applications using modern web technologies and best practices. Whether it's crafting responsive front-end interfaces with React and Next.js, or architecting backend solutions with AWS services, I ensure delivery of high-quality, production-ready code.
+
+Looking to bring your web project to life? Let's collaborate and create something amazing together.
 
 ---
 
-- Twitter [@yourname](https://twitter.com/yourname)
-- GitHub [@yourname](https://github.com/yourname)
-- Instagram [@yourname](https://instagram.com/yourname)
-- Email your@name.com
+- GitHub [@waiyan](https://github.com/willowmt)
+- LinkedIn [@waiyandev](https://linkedin.com/in/waiyandev)
+- Email waiyanmt.dev@gmail.com
