--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -16,6 +16,6 @@ Looking to bring your web project to life? Let's collaborate and create somethin
 
 ---
 
-- GitHub [@waiyan](https://github.com/willowmt)
-- LinkedIn [@waiyandev](https://linkedin.com/in/waiyandev)
+- GitHub [@willowmt](https://github.com/willowmt)
+- LinkedIn [@waiyanmt](https://www.linkedin.com/in/wai-yan-min-thu-110440279/)
 - Email waiyanmt.dev@gmail.com
