--- a/pages/photos.mdx
+++ b/pages/photos.mdx
@@ -4,28 +4,44 @@ title: Photos
 date: 2021-03-18
 ---
 
+
+
 # Photos
 
-Here's some of my photography.
+Here's some of my highlights.
 
 import Image from 'next/image'
 
 <Image
-  src="/images/photo2.jpg"
+  src="/images/hackathon/hkt-1.png"
   alt="Photo"
   width={1125}
   height={750}
   priority
   className="next-image"
 />
-[Unsplash ↗ ](https://unsplash.com/photos/WeYamle9fDM)
+
+**Singapore VeChain Hackathon Oct 2024**
 
 <Image
-  src="/images/photo.jpg"
+  src="/images/hackathon/hkt-2.png"
   alt="Photo"
   width={1125}
   height={750}
   priority
   className="next-image"
 />
-[Unsplash ↗ ](https://unsplash.com/photos/ndN00KmbJ1c)
+
+**#Hackathon #Stressful**
+
+<Image
+  src="/images/hackathon/hkt-4.jpg"
+  alt="Photo"
+  width={1125}
+  height={750}
+  priority
+  className="next-image"
+/>
+
+**Singapore Hackathon At UBS HQ Sept 2024**
+
