added deep purple

--- a/pages/photos.mdx
+++ b/pages/photos.mdx
@@ -34,6 +34,17 @@ import Image from 'next/image'
 
 **#Hackathon #Stressful**
 
+<Image
+  src="/images/hackathon/hkt-5.png"
+  alt="Photo"
+  width={1125}
+  height={750}
+  priority
+  className="next-image"
+/>
+
+**#VeChain #EasyA**
+
 
 <Image
   src="/images/hackathon/hkt-4.jpg"
