added logo section

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -14,6 +14,8 @@ I focus on building performant applications using modern web technologies and be
 
 Looking to bring your web project to life? Let's collaborate and create something amazing together.
 
+<img src="/images/logos.png" style={{width: '800px', height: '150px', borderRadius: '10px', objectFit: 'cover'}} alt="Wai Yan" />
+
 ---
 
 - GitHub [@willowmt](https://github.com/willowmt)
